fix broken layout of /edit page

--- a/public/css/gumby.css
+++ b/public/css/gumby.css
@@ -1685,6 +1685,10 @@ table.rounded thead th, table.rounded thead td, table.rounded caption + tbody tr
 
 .ie9 .radio.checked i, .ie9 .checkbox.checked i { top: 0; }
 
+div.stretch { max-width: none; }
+
+div#edit-input-form textarea { width: 90%; height: 500px; font-size: 16px; }
+
 div.entry { border: solid 1px lightgray; padding: 1em; margin-bottom: 2em; }
 div.entry h1 { font-size: 30px; }
 div.entry h2 { font-size: 26px; }
